@@ -8,10 +8,12 @@ Collabtive 3.2
 + Fix issues with tinyMCE not correctly syncing content when saving
 + Add facilities for server-side sorting of tables to the view manager
 + Make title and daysleft column sortable in the projects block ont he desktop
-+ Update tinyMce to latest version 4.7.7 from 2.x
++ Update tinyMCE to latest version 4.7.7 from 2.x
 + Only draw file and milestone trees when message details are opened
-+ Enable mySQL strict mode by default. this prevents mysql from truncating too long strings, and otherwhise trying to force
++ Enable mySQL strict mode by default. This prevents MySQL from truncating too long strings, and otherwhise trying to force
   inputs to the data type of a column
++ Only change a milestone's tasks' dates if the corresponding form field is checked
++ Don't change a milestone's task lists names when editing the milestone
 
 Collabtive 3.1
 + Fix a bug where the generic female avatar wasnt shown in the user-admin area
